# CareerOS-AI

./: .env.example  .env.production.example  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
apps/backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  pyproject.toml  railway.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: ai.py  analytics.py  applications.py  auth.py  extension.py  jobs.py  profiles.py  resumes.py  router.py  users.py
apps/backend/app/core/: config.py  logging.py  security.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/middleware/: __init__.py  rate_limit.py  request_context.py
apps/backend/app/models/: __init__.py  application.py  job.py  profile.py  resume.py  user.py
apps/backend/app/schemas/: agents.py  ai.py  analytics_api.py  applications_api.py  auth.py  company_research.py  jobs.py  jobs_api.py  profiles.py  resumes.py  users.py
apps/backend/app/services/: analytics_service.py  application_domain.py  application_service.py  auth_service.py  cache.py  cache_keys.py  job_service.py  monitoring.py  profile_service.py  rate_limiter.py  resume_service.py
apps/backend/app/services/ai/: __init__.py  agent_context.py  (+11 more)
apps/backend/docker/: entrypoint.sh
apps/backend/migrations/: README.md
apps/backend/tests/: conftest.py  test_analytics_api.py  test_applications_api.py  test_auth_api.py  test_health.py  test_jobs_api.py  test_resumes_api.py
(+170 files in other folders)
