[project]
name = "careeros-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for CareerOS AI"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.15.2",
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.12",
  "greenlet>=3.2.2",
  "httpx>=0.28.1",
  "openai>=1.77.0",
  "PyJWT>=2.9.0",
  "pwdlib[argon2]>=0.2.1",
  "psycopg[binary]>=3.2.7",
  "pydantic-settings>=2.9.1",
  "python-dotenv>=1.1.0",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.2"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = []
